<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_game_over"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rounded"
    android:paddingTop="@dimen/spacing_medium_16"
    android:paddingBottom="@dimen/spacing_medium_16"
    tools:context=".views.fragments.GameOverFragment">

    <TextView
        android:id="@+id/tv_game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/iceberg_regular"
        android:text="@string/fragment_game_over_title"
        android:textColor="@color/colorGameOverTitle"
        android:textSize="@dimen/font_fragment_game_over_title_45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:drawableStart="@drawable/icon_money"
        android:drawableLeft="@drawable/icon_money"
        android:drawablePadding="@dimen/spacing_small_8"
        android:fontFamily="@font/iceberg_regular"
        android:gravity="center_vertical"
        android:textColor="@color/defaultTextColor"
        android:textSize="@dimen/font_fragment_money_25"
        app:layout_constraintEnd_toEndOf="@+id/tv_game_over"
        app:layout_constraintStart_toStartOf="@+id/tv_game_over"
        app:layout_constraintTop_toBottomOf="@+id/tv_game_over"
        tools:text="$MONEY$" />

    <TextView
        android:id="@+id/tv_meteor_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium_16"
        android:layout_marginEnd="@dimen/spacing_medium_16"
        android:layout_marginRight="@dimen/spacing_medium_16"
        android:fontFamily="@font/iceberg_regular"
        android:textColor="@color/defaultTextColor"
        android:textSize="@dimen/font_game_over_text_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_money"
        tools:text="$METEOR$" />

    <TextView
        android:id="@+id/tv_meteor_destroyed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium_16"
        android:layout_marginLeft="@dimen/spacing_medium_16"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:layout_marginRight="@dimen/spacing_small_8"
        android:fontFamily="@font/iceberg_regular"
        android:text="@string/fragment_game_over_meteor_destroyed"
        android:textColor="@color/defaultTextColor"
        android:textSize="@dimen/font_game_over_text_25"
        app:layout_constraintBottom_toBottomOf="@+id/tv_meteor_count"
        app:layout_constraintEnd_toStartOf="@+id/tv_meteor_count"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_meteor_count"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_enemy_ship_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:fontFamily="@font/iceberg_regular"
        android:textColor="@color/defaultTextColor"
        android:textSize="@dimen/font_game_over_text_25"
        app:layout_constraintEnd_toEndOf="@+id/tv_meteor_count"
        app:layout_constraintTop_toBottomOf="@+id/tv_meteor_count"
        tools:text="$SHIP$" />

    <TextView
        android:id="@+id/tv_enemy_ship_destroyed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:layout_marginRight="@dimen/spacing_small_8"
        android:fontFamily="@font/iceberg_regular"
        android:text="@string/fragment_game_over_enemy_ship_destroyed"
        android:textColor="@color/defaultTextColor"
        android:textSize="@dimen/font_game_over_text_25"
        app:layout_constraintBottom_toBottomOf="@+id/tv_enemy_ship_count"
        app:layout_constraintEnd_toStartOf="@+id/tv_enemy_ship_count"
        app:layout_constraintStart_toStartOf="@+id/tv_meteor_destroyed"
        app:layout_constraintTop_toTopOf="@+id/tv_enemy_ship_count"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_exploder_destroyed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:layout_marginRight="@dimen/spacing_small_8"
        android:fontFamily="@font/iceberg_regular"
        android:text="@string/fragment_game_over_exploder_destroyed"
        android:textColor="@color/defaultTextColor"
        android:textSize="@dimen/font_game_over_text_25"
        app:layout_constraintBottom_toBottomOf="@+id/tv_exploder_count"
        app:layout_constraintEnd_toStartOf="@+id/tv_exploder_count"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_enemy_ship_destroyed"
        app:layout_constraintTop_toTopOf="@+id/tv_exploder_count"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_exploder_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:fontFamily="@font/iceberg_regular"
        android:textColor="@color/defaultTextColor"
        android:textSize="@dimen/font_game_over_text_25"
        app:layout_constraintEnd_toEndOf="@+id/tv_enemy_ship_count"
        app:layout_constraintTop_toBottomOf="@+id/tv_enemy_ship_count"
        tools:text="$EXP$" />

    <TextView
        android:id="@+id/tv_border_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small_8"
        android:fontFamily="@font/iceberg_regular"
        android:textColor="@color/defaultTextColor"
        android:textSize="@dimen/font_game_over_text_25"
        app:layout_constraintEnd_toEndOf="@+id/tv_exploder_count"
        app:layout_constraintTop_toBottomOf="@+id/tv_exploder_count"
        tools:text="$BORDER$" />

    <TextView
        android:id="@+id/tv_border_destroyed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small_8"
        android:layout_marginRight="@dimen/spacing_small_8"
        android:fontFamily="@font/iceberg_regular"
        android:text="@string/fragment_game_over_border_destroyed"
        android:textColor="@color/defaultTextColor"
        android:textSize="@dimen/font_game_over_text_25"
        app:layout_constraintBottom_toBottomOf="@+id/tv_border_count"
        app:layout_constraintEnd_toStartOf="@+id/tv_border_count"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_exploder_destroyed"
        app:layout_constraintTop_toTopOf="@+id/tv_border_count"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>